# DistributedStreamProcess

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/headers/: ____task.h  __task.h  config.h  consumer_config.h  gogoanime.h  hostinfo.h  myheader.h  simplehtmlparser.h  simpleredissubscriber.h  task.h  task_consumer.h  task_publisher.h  task_response.h  utilities.h
src/main/: fetch.cpp  main.cpp  producer.cpp  test.cpp
